# Tempr

./: CLAUDE.md  Cargo.toml  deny.toml
.github/hooks/: pre-push
.github/workflows/: ci.yml
crates/tempr/: Cargo.toml
crates/tempr/src/: main.rs
crates/tempr/tests/: integration.rs
crates/tempr_db/: Cargo.toml
crates/tempr_db/src/: driver.rs  error.rs  lib.rs  stream.rs
crates/tempr_db_postgres/: Cargo.toml
crates/tempr_db_postgres/src/: decode.rs  driver.rs  lib.rs  params.rs  stream.rs
crates/tempr_domain/: Cargo.toml
crates/tempr_domain/src/: connection.rs  history.rs  ids.rs  lib.rs  query.rs  schema.rs  workspace.rs
crates/tempr_events/: Cargo.toml
crates/tempr_events/src/: bus.rs  event.rs  lib.rs
crates/tempr_services/: Cargo.toml
crates/tempr_services/src/: connection.rs  lib.rs  query.rs  registry.rs  schema.rs
crates/tempr_workspace/: Cargo.toml
crates/tempr_workspace/src/: error.rs  lib.rs  manifest.rs  storage.rs
docs/: 01-vision.md  02-architecture.md  03-domain-model.md  04-workspace.md  05-services.md  06-event-system.md  07-storage.md  08-plugin-api.md  09-database-engine.md  10-editor.md  11-gpui.md  12-sql-intelligence.md  13-result-grid.md  14-project-layout.md  15-coding-standards.md  16-roadmap.md  DECISIONS.md  PRODUCT.md  PROGRESS.md  README.md  TODO.md
docs/adr/: 0001-gpui-for-ui.md  0002-rust-only.md  0003-custom-sql-editor.md  0004-postgresql-first.md  0005-workspace-first.md  0006-service-oriented-architecture.md  0007-internal-event-bus.md  0008-plugin-system.md  0009-internal-semantic-engine-not-lsp.md  README.md  template.md
docs/rfc/: 0000-template.md  README.md
docs/superpowers/plans/: 2026-07-13-pr-review-workflow.md
docs/superpowers/specs/: 2026-07-13-pr-review-workflow-design.md
scripts/: setup.sh
src/: main.rs
