[workspace]
members = [
    "crates/tempr",
    "crates/tempr_domain",
    "crates/tempr_events",
    "crates/tempr_services",
    "crates/tempr_workspace",
    "crates/tempr_db",
    "crates/tempr_db_postgres",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
# Internal crates
tempr_domain      = { path = "crates/tempr_domain" }
tempr_events      = { path = "crates/tempr_events" }
tempr_services    = { path = "crates/tempr_services" }
tempr_workspace   = { path = "crates/tempr_workspace" }
tempr_db          = { path = "crates/tempr_db" }
tempr_db_postgres = { path = "crates/tempr_db_postgres" }

# Async
async-trait = "0.1"
futures      = "0.3"
tokio            = { version = "1", features = ["full"] }
tokio-postgres   = { version = "0.7", features = ["with-uuid-1", "with-chrono-0_4", "with-serde_json-1"] }
deadpool-postgres = { version = "0.14", features = ["rt_tokio_1"] }
postgres-types   = "0.2"

# Data / serialisation
chrono      = { version = "0.4", features = ["serde"] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
toml        = "0.8"
uuid        = { version = "1", features = ["v4", "serde"] }

# Error handling
anyhow    = "1"
thiserror = "2"

# Platform directories
dirs = "5"

parking_lot = "0.12"

# Logging
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Testing
tempfile = "3"

[workspace.lints.rust]
unsafe_code   = "forbid"
unused_must_use = "warn"

[workspace.lints.clippy]
unwrap_used  = "warn"
expect_used  = "warn"
