[package]
name              = "tempr_db_postgres"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tempr_db.workspace     = true
tempr_domain.workspace = true

async-trait.workspace      = true
chrono.workspace           = true
futures.workspace          = true
serde_json.workspace       = true
tokio.workspace            = true
tokio-postgres.workspace   = true
postgres-types.workspace   = true
deadpool-postgres.workspace = true
uuid.workspace          = true
thiserror.workspace        = true
tracing.workspace          = true

[lints]
workspace = true
