[package]
name              = "tempr_domain"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chrono     = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
uuid       = { workspace = true }

[dev-dependencies]

[lints]
workspace = true
