[package]
name              = "tempr_workspace"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tempr_domain.workspace = true
tempr_events.workspace = true

async-trait.workspace = true
dirs.workspace        = true
serde.workspace       = true
serde_json.workspace  = true
thiserror.workspace   = true
tokio.workspace       = true
toml.workspace        = true
uuid.workspace        = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt"] }

[lints]
workspace = true
